CREATE TABLE PATIENTS
(
	ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
	SSN VARCHAR(255),
	FNAME VARCHAR(255),
	LNAME VARCHAR(255),
	DOB VARCHAR(255),
	CELLNO VARCHAR(255),
	EMAIL VARCHAR(255),
	DISPLAYNAME VARCHAR(255)
	
	
);

CREATE TABLE USERS
(
	ID INTEGER NOT NULL GENERATED ALWAYS AS IDENTITY (START WITH 1, INCREMENT BY 1),
	NAME VARCHAR(255),
	PASSWORD VARCHAR(255),
	RIGHTS VARCHAR(255)
);
INSERT INTO USERS(NAME,PASSWORD,RIGHTS) VALUES('admin','admin','ReadWriteAndUserManagement');
